syntax = "proto3";
package key_value_store;

message KeyValuePairMsg {
  string key = 1;
  string value = 2;
}

message KeyValueStoreMsg {
  string name = 1;
  repeated KeyValuePairMsg values = 2;
}
